@@ -16,6 +16,7 @@
 
 	<install for="1.1, 1.1.0-1.1.99">
 		<modification format="xml" type="file">Sources.xml</modification>
+		<modification format="xml" type="file">BoardsAndTopics.xml</modification>
 		<modification format="xml" type="file">Languages.xml</modification>
 		<require-file name="PrettyUrls-Filters.php" destination="$sourcedir" />
 		<require-file name="Subs-PrettyUrls.php" destination="$sourcedir" />
@@ -24,6 +25,7 @@
 	</install>
 	<uninstall for="1.1, 1.1.0-1.1.99">
 		<modification format="xml" type="file" reverse="true">Sources.xml</modification>
+		<modification format="xml" type="file" reverse="true">BoardsAndTopics.xml</modification>
 		<modification format="xml" type="file" reverse="true">Languages.xml</modification>
 		<remove-file name="$sourcedir/PrettyUrls-Filters.php" />
 		<remove-file name="$sourcedir/Subs-PrettyUrls.php" />
